# fastbootstrap

./: .gitignore  .pre-commit-config.yaml  README.md  bootstrap.py  bootstrap_experiment.ipynb  compare_functions.py  outlier_detection.py  pyproject.toml  requirements.txt  setup.py  utils.py
bootstrap/: __init__.py  bootstrap.py  compare_functions.py
data/: hw_bootstrap.csv
fastbootstrap/: __init__.py  bootstrap.py  compare_functions.py  constants.py  core.py  exceptions.py  methods.py  simulation.py  utils.py  visualization.py
