[project]
name = "fastbootstrap"
version = "1.6.1"
description = "Fast Python implementation of statistical bootstrap"
readme = "README.md"
authors = [
    {name = "Timofey Tkachenko", email = "timofey_tkachenko@pm.me"}
]
keywords = [
    "bootstrap",
    "statistics",
    "statistical-inference",
    "resampling",
    "confidence-intervals",
    "hypothesis-testing",
    "ab-testing",
    "data-science",
    "machine-learning",
    "monte-carlo",
    "nonparametric",
    "bca-bootstrap",
    "percentile-bootstrap",
    "spotify-bootstrap",
    "statistical-simulation",
    "power-analysis",
    "statistical-testing",
    "sampling-distribution",
    "p-value",
    "significance-testing",
    "quantile-bootstrap"
]
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.4.0",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "nbqa>=1.9.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.3",
]

[project.urls]
"Homepage" = "https://github.com/timofeytkachenko/fastbootstrap"

[tool.ruff]
exclude = [
    "fastbootstrap/__init__.py"
]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build]
include = ['img/*']
